تحديث رابط التجربة

--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
         <h3>تقارير و إحصائيات</h3>
         <p>تحكم كامل في متجرك مع تقارير تفصيلية تساعدك على النمو.</p>
       </div>
+      <div class="feature-box">
+        <i class="fas fa-store"></i>
+        <h3>نسخه تجريبية ويب فقط</h3>
+        <p>يمكنك تصفح نسخة تجريبية من التطبيق على الويب .</p>
+        <a href="https://codebh.pages.dev/">تطبيق متجرك</a>
+      </div>
     </section>
 
     <!-- TESTIMONIALS -->
